--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/portfolioDemo/assets-liabilities.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/portfolioDemo/assets-liabilities.xhtml
@@ -46,16 +46,16 @@
 							Assets
 							</div>
 							<div class="Conatiner100">
-								Value of Primary Residence <br/> S$ <input type="text" placeholder="0"></input>
+								Value of Primary Residence <br/> S$ <p:inputNumber class="input_no_type" placeholder="0"></p:inputNumber>
 							</div>
 							<div class="Conatiner100">
-								Investible Assets (excluding primary residence) <br/> S$ <input type="text" placeholder="0"></input>
+								Investible Assets (excluding primary residence) <br/> S$ <p:inputNumber class="input_no_type" placeholder="0"></p:inputNumber>
 							</div>
 							<div class="Conatiner100">
-								Employment Income / Income from Business <br/> S$ <input type="text" placeholder="0"></input>
+								Employment Income / Income from Business <br/> S$ <p:inputNumber class="input_no_type" placeholder="0"></p:inputNumber>
 							</div>
 							<div class="Conatiner100">
-								Other Source of Income <br/> S$ <input type="text" placeholder="0"></input>
+								Other Source of Income <br/> S$ <p:inputNumber class="input_no_type" placeholder="0"></p:inputNumber>
 							</div>
 						</div>
 						<div class="Container50 liability">
@@ -63,16 +63,16 @@
 							Liabilities
 							</div>
 							<div class="Conatiner100">
-								Mortgage Loan on Primary Residence <br/> S$ <input type="text" placeholder="0"></input>
+								Mortgage Loan on Primary Residence <br/> S$ <p:inputNumber class="input_no_type" placeholder="0"></p:inputNumber>
 							</div>
 							<div class="Conatiner100">
-								Liabilities (Loan excluding mortgage loan on primary residence) <br/> S$ <input type="text" placeholder="0"></input>
+								Liabilities (Loan excluding mortgage loan on primary residence) <br/> S$ <p:inputNumber class="input_no_type" placeholder="0"></p:inputNumber>
 							</div>
 							<div class="Conatiner100 tab_title networth">
 								Net Worth
 							</div>
 							<div class="Conatiner100">
-								Current net worth <br/> S$ <input type="text" placeholder="0"></input>
+								Current net worth <br/> S$ <p:inputNumber class="input_no_type" placeholder="0"></p:inputNumber>
 							</div>
 						</div>
 					</div>
