--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/portfolioDemo/portfolio_intro.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/portfolioDemo/portfolio_intro.xhtml
@@ -51,15 +51,15 @@
 					</div>
 					<div class="Container100 tab_dtl">
 						<p>
-						Hi, what is your full name ?<input style="width:190px;" type="text" placeholder="Enter Your Full Name"></input>
+							Hi, what is your full name ?<p:inputText style="width:190px;"  placeholder="Enter Your Full Name"></p:inputText>
 						</p>
 						<p>
-						<span class="input_value">Sam</span> , what is your e-mail address?<input style="width:190px;" type="text" placeholder="Enter Your Email"></input>
+							<span class="input_value">Sam</span> , what is your e-mail address?<p:inputText style="width:190px;"  placeholder="Enter Your Email"></p:inputText>
 						</p>
 						<p>
-						<span class="input_value">Sam</span> , how old are you?<input style="width:55px;" type="text" placeholder="Age"></input>
+							<span class="input_value">Sam</span> , how old are you?<p:inputText style="width:55px;"  placeholder="Age"></p:inputText>
 						</p>
-						</div>
+					</div>
 							
 					
 
