--- a/Invessence/modules/web/src/main/webapp/pages/custody/uob/acctOpening.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/uob/acctOpening.xhtml
@@ -1106,8 +1106,8 @@
                                            <h3>Name of Primary School Attend ?</h3>
                                        </div>	 -->
                                        <div class="Container60 Responsive100">
-                                          <input id="jointschoolName" name="schoolName" type="text" placeholder="What is the name of Primary School Attend ?"/>
-                                          <label for="schoolName">Name of Primary School Attend</label>
+                                          <input id="jointschoolName" name="schoolName" type="text" placeholder="What is the name of Primary School Attended ?"/>
+                                          <label for="schoolName">Name of Primary School Attended</label>
                                        </div>
                                     </div>
 
