--- a/Invessence/modules/web/src/main/webapp/pages/custody/uob/acctOpening.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/uob/acctOpening.xhtml
@@ -1217,8 +1217,10 @@
                                        </div>
                                        <div class="Container50 Responsive100 margin-left">
                                           <div class="Container100"><span class="title_line">Other</span></div>
-                                          <input id="wealthother" name="wealthother" type="text" placeholder="Please Specify"/>
-                                          <label for="wealthother">Please Specify</label>
+                                          <div class="Container100">
+                                             <input id="wealthother" name="wealthother" type="text" placeholder="Please Specify"/>
+                                             <label for="wealthother">Please Specify</label>
+                                             </div>
                                        </div>
 
                                     </div>
@@ -1267,8 +1269,10 @@
                                        </div>
                                        <div class="Container50 Responsive100 margin-left">
                                           <div class="Container100"><span class="title_line">Other</span></div>
-                                          <input id="wealthotherjoint" name="wealthother" type="text" placeholder="Please Specify"/>
-                                          <label for="wealthother">Please Specify</label>
+                                          <div class="Container100">
+                                             <input id="wealthotherjoint" name="wealthother" type="text" placeholder="Please Specify"/>
+                                             <label for="wealthother">Please Specify</label>
+                                           </div>
                                        </div>
 
                                     </div>
