--- a/Invessence/modules/web/src/main/webapp/pages/custody/uob/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/uob/index.xhtml
@@ -30,7 +30,7 @@
                                     </div>
                                     <div class="Container20 label_opacity">
                                         <p:selectOneRadio id="acctCat" value="#{uobCustodyBean.acctCat}">
-                                            <p:ajax listener="#{uobCustodyBean.onChangeValue}"
+                                            <p:ajax listener="#{uobCustodyBean.onChangeValue0}"
                                                     update="extCstmParm"/>
                                             <f:selectItem itemLabel="Yes" itemValue="Yes"></f:selectItem>
                                             <f:selectItem itemLabel="No" itemValue="No"></f:selectItem>
